--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,14 @@
-/* * {
+* {
     padding: 0;
     margin: 0;
 }
 
 body {
-    background-color: #000000;
-    background-position: center;
-    background-size: cover;
+    background-color: #ff0000;
     color: #758694;
 }
 
-.main {
+#main{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,34 +17,37 @@ body {
     row-gap: 3vw;
 }
 
-.main .profile {
-    display: inherit;
+.profile {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
     column-gap: 2vw;
-    background-color: #000000;
     padding: 36px 42px;
     border-radius: 2rem;
-    box-shadow: #000000c5 2px 4px 8px;
     box-sizing: border-box;
 }
 
-.main .profile .profilePicture img {
+.column {
+    padding: 20px;
+}
+
+#profilePicture > img{
     height: 35vh;
     border-radius: 50%;
 }
 
-.main .profile .profileInformation .name {
+#profileDescription > .name {
     font: min(5vw, 5vh)monospace;
     color: #ffffff;
 }
 
-.main .profile .profileInformation .designation {
+#profileDescription > .designation {
     font: min(2vw, 2vh)monospace;
 }
 
-.loginButton {
+#profileDescription > .loginButton {
     padding: 15px 0;
 }
 
@@ -84,22 +85,10 @@ button:active {
 
 button:active {
     opacity: .5;
-} */
-
-.container {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-}
-
-.column {
-    flex: 1;
-    padding: 20px;
-    background-color: #f2f2f2;
 }
 
 @media (max-width: 768px) {
-    .container {
+    .profile {
         flex-direction: column;
     }
 }
