--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,12 @@ body {
 .profile {
     display: flex;
     flex-direction: row;
-    gap: 20px;
     align-items: center;
     justify-content: center;
     column-gap: 2vw;
     padding: 36px 42px;
     border-radius: 2rem;
     box-sizing: border-box;
-}
-
-.column {
-    padding: 20px;
 }
 
 #profilePicture > img{
@@ -47,7 +42,7 @@ body {
     font: min(2vw, 2vh)monospace;
 }
 
-#profileDescription > .loginButton {
+#profileDescription > .login > .loginButton {
     padding: 15px 0;
 }
 
