--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,14 @@ body {
     color: #758694;
 }
 
-#main{
+#main {
+    background-color: #000000;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
     row-gap: 3vw;
 }
 
@@ -21,28 +23,32 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
     column-gap: 2vw;
+    row-gap: 2vw;
     padding: 36px 42px;
     border-radius: 2rem;
     box-sizing: border-box;
 }
 
-#profilePicture > img{
+#profilePicture>img {
     height: 35vh;
     border-radius: 50%;
 }
 
-#profileDescription > #name {
+#profileDescription {
+    justify-content: center;
+}
+
+#profileDescription>#name {
     font: min(5vw, 5vh)monospace;
     color: #ffffff;
 }
 
-#profileDescription > #about {
+#profileDescription>#about {
     font: min(2vw, 2vh)monospace;
 }
 
-#profileDescription > #contact > #contactButton {
+#profileDescription>#contact>#contactButton {
     padding: 15px 0;
 }
 
@@ -85,5 +91,37 @@ button:active {
 @media (max-width: 768px) {
     #profile {
         flex-direction: column;
+        padding: 0 0 50px 0;
+    }
+
+    #profilePicture {
+        width: 100vw;
+        display: flex;
+        align-items: end;
+        justify-content: left;
+        box-sizing: border-box;
+    }
+
+    #profilePicture>img {
+        height: 20vh;
+        padding: 0px 42px;
+    }
+
+    #profileDescription {
+        padding: 0px 42px;
+    }
+
+    #profileDescription>#about {
+        font: min(4vw, 4vh)monospace;
+        margin: 10px 0;
+    }
+
+    #profileDescription>#name {
+        margin: 10px 0;
+        font: min(5vw, 5vh)monospace;
+    }
+
+    #profileDescription>#contact>#contactButton {
+        padding: 0;
     }
 }
